# django-lookup-property

./: .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Makefile  README.md  index.html  justfile  manage.py  mkdocs.yml  noxfile.py  pyproject.toml  search.html
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: test.yml
converters/: index.html
docs/: converters.md  index.md  intro.md  usage.md
example_project/example/: apps.py  models.py  utils.py
example_project/example/management/commands/: to_ast.py
example_project/example/migrations/: 0001_initial.py
example_project/project/: settings.py
intro/: index.html
lookup_property/: __init__.py  decorator.py  dispatch.py  expressions.py  field.py  typing.py
lookup_property/converters/: __init__.py  aggregates.py  cast.py  conditions.py  datetime.py  expressions.py  function.py  functions.py  lookups.py  main.py  math.py  number.py  string.py  utils.py
search/: search_index.json
tests/: __init__.py  conftest.py  factories.py  plugins.py  test_aggregates.py  test_clean.py  test_converters.py  test_date_expressions.py  test_expressions.py  test_filtering.py  test_lookups.py  test_math_expressions.py  test_property.py  test_relations.py  test_source.py  test_utils.py
tests/example/: models.py
tests/example/management/commands/: to_ast.py
tests/example/migrations/: 0001_initial.py
tests/project/: settings.py  testdb
tests/shared/: apps.py  models.py
tests/shared/migrations/: 0001_initial.py
usage/: index.html
