[tool.poetry]
name = "django-lookup-property"
version = "0.0.18"
description = "Django model properties that are also lookup expressions."
authors = [
    "Matti Lamppu <lamppu.matti.akseli@gmail.com>",
]
packages = [
    { include = "lookup_property" },
]
license = "MIT"
readme = "README.md"
homepage = "https://mrthearman.github.io/django-lookup-property"
repository = "https://github.com/MrThearMan/django-lookup-property"
keywords = [
    "django",
    "lookup",
    "property",
    "orm",
    "model",
    "extension",
]
classifiers = [
    "Environment :: Web Environment",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
]
include = [
    "README.md",
    "LICENSE",
]
exclude = [
    "tests",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/MrThearMan/django-lookup-property/issues"

[tool.poetry.dependencies]
python = ">=3.11,<4"
Django = ">=4.2"

[tool.poetry.group.test.dependencies]
pytest = "8.0.0"
coverage = "7.4.1"
pytest-django = "4.8.0"
freezegun = "^1.2.2"
pre-commit = "3.6.1"
tox = "4.12.1"
tox-gh-actions = "3.2.0"
factory-boy = "^3.3.0"
django-shared-property = "^0.8.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "1.5.3"
pymdown-extensions = "10.7"
mkdocs-mermaid2-plugin = "1.1.1"

[tool.poetry.group.lint.dependencies]
mypy = "1.8.0"
django-stubs = "4.2.7"

[tool.ruff]
fix = true
line-length = 120
extend-exclude = [
    "tests/*",
]

[tool.ruff.lint]
typing-modules = [
    "lookup_property.typing",
]
select = [
    "A",        # flake8-builtins
    "ANN",      # flake8-annotations
    "ARG",      # flake8-unused-arguments
    "B",        # flake8-bugbear
    "BLE",      # flake8-blind-except
    "C90",      # mccabe
    "C4",       # flake8-comprehensions
    "COM",      # flake8-commas
    "D200",     # pydocstyle: One-line docstring should fit on one line
    "D201",     # pydocstyle: No blank lines allowed before function docstring (found {num_lines})
    "D202",     # pydocstyle: No blank lines allowed after function docstring (found {num_lines})
    "D209",     # pydocstyle: Multi-line docstring closing quotes should be on a separate line
    "D213",     # pydocstyle: Multi-line docstring summary should start at the second line
    "DTZ",      # flake8-datetimez
    "E",        # pycodestyle errors
    "EM",       # flake8-errmsg
    "F",        # pyflakes
    "FBT",      # flake8-boolean-trap
    "I",        # isort
    "INP",      # flake8-no-pep420
    "ISC",      # flake8-implicit-str-concat
    "N",        # pep8-naming
    "PERF",     # perflint
    "PGH",      # pygrep-hooks
    "PIE",      # flake8-pie
    "PL",       # pylint
    "PT",       # flake8-pytest-style
    "PTH",      # flake8-use-pathlib
    "PYI",      # flake8-pyi
    "Q",        # flake8-quotes
    "RET",      # flake8-return
    "RSE",      # flake8-raise
    "RUF",      # ruff-specific rules
    "S",        # flake8-bandit
    "SIM",      # flake8-simplify
    "T20",      # flake8-print
    "TCH",      # flake8-type-checking
    "TRY",      # tryceratops
    "UP",       # pyupgrade
    "W",        # pycodestyle warnings
]
ignore = [
    "ANN101",   # Missing type annotation for `self` in method
    "ANN401",   # Any is allowed
    "S311",     # random-module is OK.
    #
    # Conflicting with ruff-format
    #
    "COM812",   # Trailing comma missing
    "COM819",   # Trailing comma prohibited
    "E501",     # Line too long
    "ISC001",   # Implicitly concatenated string literals on one line
    "Q000",     # Single quotes found but double quotes preferred
    "Q001",     # Single quote multiline found but double quotes preferred
    "Q002",     # Single quote docstring found but double quotes preferred
    "Q003",     # Change outer quotes to avoid escaping inner quotes
    "W191",     # Indentation contains tabs
]

[tool.ruff.lint.extend-per-file-ignores]
"lookup_property/converters/*.py" = [
    "ARG001",   # Unused function argument
]

[tool.mypy]
python_version = "3.12"
warn_return_any = "True"
warn_unused_configs = "True"
plugins = [
    "mypy_django_plugin.main",
]

[tool.django-stubs]
django_settings_module = "tests.project.settings"

[tool.coverage.run]
relative_files = true

[tool.coverage.report]
omit = [
    "tests/*",
    "docs/*",
    ".venv/*",
    ".tox/*",
]
exclude_lines = [
    "if TYPE_CHECKING:",
    "except ImportError:",
    "pragma: no cover",
    "pass",
    "def __repr__",
    "def __str__",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.project.settings"
addopts = "-vv -s --log-cli-level=INFO"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{311, 312}-django{42, 50}
isolated_build = true

[gh-actions]
python =
    3.11: py311
    3.12: py312

[testenv]
allowlist_externals =
    poetry
setenv =
    PYTHONPATH = {toxinidir}
    DJANGO_SETTINGS_MODULE = tests.project.settings
deps =
    django42: Django >=4.2,<4.3
    django50: Django >=5.0,<5.1

    pytest
    coverage
    pytest-django
    freezegun
    factory-boy
commands =
    coverage run -m pytest -vv -s --log-cli-level=INFO
"""

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
